# Concordium-Hackathon-Task-4

./: .gitignore  .gitmodules  Makefile  README.md
backend/concordium-lsp/: Cargo.toml
backend/concordium-lsp/src/: calc.rs  checks.rs  error.rs  lib.rs  liq_pool.rs  list.rs  located.rs  lqccd.rs  stake_system.rs  state.rs  ticket_account.rs  validator_system.rs  wccd.rs
backend/concordium-lsp/src/liq_pool/: add_liquidity.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.css  App.jsx  ReadMe.md  config.js  index.css  transaction.js
frontend/src/components/Container/: Container.jsx  Container.module.css
frontend/src/components/DescriptionContainer/: DescriptionContainer.jsx
frontend/src/components/StakeContainer/: StakeContainer.jsx
frontend/src/components/UnstakeContainer/: UnstakeContainer.jsx  UnstakeContainer.module.css
frontend/src/components/descriptionContainer/: DescriptionContainer.jsx  DescriptionContainer.module.css
frontend/src/components/footer/: Footer.jsx  Footer.module.css
frontend/src/components/header/: Header.jsx  Header.module.css
frontend/src/components/stakeContainer/: StakeContainer.jsx
frontend/src/components/unstakeContainer/: UnstakeContainer.jsx
frontend/src/components/wallet/: Wallet.jsx
frontend/src/hooks/: useWallet.jsx
frontend/src/pages/: MainPage.jsx
frontend_v2/: package-lock.json  package.json
frontend_v2/src/: App.tsx
frontend_v2/src/helpers/: config.ts  liquidStakeAPI.ts
frontend_v2/src/pages/: LiquidStaking.tsx
(+8 files in other folders)
